--- a/Files/style.css
+++ b/Files/style.css
@@ -28,3 +28,7 @@
 #offcampus,#research,#pgdaem{
     display:none;
 }
+
+#durationfrom2,#durationfrom3,#durationto2,#durationto3,#venue2{
+    display:none;
+}
