--- a/Files/style.css
+++ b/Files/style.css
@@ -28,3 +28,15 @@
 #offcampus,#research,#pgdaem{
     display:none;
 }
+
+#protype td select{
+    width: 330px;
+}
+
+#oncampus td select, #offcampus td select, #research td select, #pgdaem td select, #dor td input{
+    width:330px;
+}
+
+#durconduct td input, #durissue td input, #venue td input{
+    width:330px;
+}
