add schedule remove useless code,addprogram remove 2 program and add 1 program,menu.php modified,script.js remove myfunction,databaseupdate,pgdaem,savepgdaem added,.

--- a/Files/style.css
+++ b/Files/style.css
@@ -45,3 +45,27 @@
 #durconduct td input, #durissue td input, #venue td input{
     width:330px;
 }
+
+
+
+/* Add a background color when the inputs get focus */
+input[type=text]:focus, input[type=password]:focus {
+    background-color: #ddd;
+    outline: none;
+}
+
+/* Set a style for all buttons */
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    opacity: 0.9;
+}
+
+button:hover {
+    opacity:1;
+}
